gccida/g1/add_data_member_location_attribute
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/dwarf2out.c:9031:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/dwarf2out.c:9072:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/dwarf2out.c:9080:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( int *)val_addr[1]; 
             ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/dwarf2out.c:9094:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/dwarf2out.c:9110:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4441, "AT_unsigned"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/dwarf2out.c:9135:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8599, "add_data_member_location_attribute"); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_data_member_location_attribute/src/obj/dwarf2out.o] Error 1
